--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .uben{
-    background-color: blue;
+    background-color: rgb(19, 60, 206);
     width: 70%;
     height: 200px;
 }
@@ -15,8 +15,33 @@
     width: 70%;
     height: 400px;
    
-   
-    
+}
+.buttun-map{
+    padding-top: 60px;
+}
+
+
+   .btn{
+    margin: auto;
+    margin-left: 30%;
+    margin-top: 0%;
+    width: 40%;
+    height: 35px;
+    background-color: aliceblue;
+    color: rgba(87, 87, 92, 0.572);
+    border-radius: 10px;
+    text-align: left;
+    padding-left: 20px;
     
 
-}
+   }
+
+   h4{
+    margin: auto;
+    margin-left: 30%;
+    margin-bottom: 0%;
+    color: white;
+    font-size: 20px;
+    padding-left: 70px;
+    padding-bottom: 10px;
+   }
