--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,6 +39,7 @@
     text-align: left;
     padding-left: 20px;
     
+    
 
    }
 
@@ -57,7 +58,5 @@
     width: 70%;
     height: 100px;
     margin-left: 15%;
-    border: 2px wheat;
-    
-
+    border-color: black;
    }
