--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,9 +24,9 @@
 
 .btn {
   margin: auto;
-  margin-left: 30%;
+  margin-left: 10%;
   margin-top: 0%;
-  width: 40%;
+  width: 60%;
   height: 35px;
   background-color: aliceblue;
   color: rgba(87, 87, 92, 0.572);
@@ -51,41 +51,66 @@ h4 {
   border-color: black;
 }
 
-@media screen and (max-width : 800px) {
-  .mapDetail {
-    margin: auto;
-    background-color: white;
-    width: 10px;
-    height: 200px;
-    border-radius: 5px;
-    padding-left: 100px;
-    
-    text-align: center;
-  }
-
-  
-}
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 995px) {
   .btn {
+    background-color: brown;
     margin: auto;
     margin-top: 0%;
-    width: 60%;
-    height: 35px;
+    width: 350px;
+    height: 25px;
     background-color: aliceblue;
     color: rgba(87, 87, 92, 0.572);
     border-radius: 10px;
     text-align: left;
     margin-left: 40px;
+    margin-bottom: 5px;
   }
-  
-}
-@media screen and (max-width:800px) {
+  .mapDetail {
+    margin: auto;
+    padding-top: 10px;
+    background-color: white;
+    width: 10px;
+    height: 150px;
+    border-radius: 5px;
+    padding-left: 80px;
+    text-align: center;
+  }
   h4 {
     margin: auto;
-    color: white;
-    font-size: 5px;
+    font-size: 10px;
     padding-left: 50px;
     padding-bottom: 5px;
+    padding-left: 100px;
   }
-  
+}
+
+@media screen and (max-width: 1400px) {
+  .btn {
+    background-color: brown;
+    margin: auto;
+    margin-top: 0%;
+    width: 310px;
+    height: 25px;
+    background-color: aliceblue;
+    color: rgba(87, 87, 92, 0.572);
+    border-radius: 10px;
+    text-align: left;
+    margin-left: 40px;
+    margin-bottom: 5px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .btn {
+    margin: auto;
+    margin-top: 0%;
+    width: 210px;
+    height: 25px;
+    background-color: aliceblue;
+    color: rgba(87, 87, 92, 0.572);
+    border-radius: 10px;
+    text-align: left;
+    margin-left: 40px;
+    margin-bottom: 5px;
+  }
 }
